--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kofax",
+  "name": "Talknote",
   "version": "1.0.0",
   "type": "module",
   "engines": { "node": "20.x" },
@@ -13,7 +13,7 @@
     "googleapis": "^144.0.0",
     "mime-types": "^2.1.35",
     "date-fns": "^3.6.0",
-    "xml2js": "^0.6.2",
+    "xml2js": "^0.6.2"
     
   }
 }
