--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,20 @@
   "version": 2,
   "builds": [
     { "src": "api/**/*.js", "use": "@vercel/node" },
-    { "src": "Public/**", "use": "@vercel/static" }
+    { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
     {
-      "src": "^/api/(.*)$",
-      "dest": "/api/$1.js"
+      "src": "/api/(.*)",
+      "dest": "/api/$1.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
     },
     {
-      "src": "^/(.*)$",
+      "src": "/notes/([a-zA-Z0-9_-]+)",
+      "dest": "/public/note.html"
+    },
+    {
+      "src": "/(.*)",
       "dest": "/public/$1"
     }
   ]
