--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,13 @@
     { "src": "api/**/*.js", "use": "@vercel/node" },
     { "src": "public/**", "use": "@vercel/static" }
   ],
+  "routes": [
+    {
+      "src": "^/api/(.*)$",
+      "dest": "/api/$1.js",
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"]
+    }
+  ],
   "rewrites": [
     {
       "source": "/notes/:noteId",
@@ -14,9 +21,16 @@
       "destination": "/public/index.html"
     },
     {
+      "source": "/index.html",
+      "destination": "/public/index.html"
+    },
+    {
+      "source": "/note.html",
+      "destination": "/public/note.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/public/$1"
     }
   ]
-  
 }
