--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "date-fns": "^3.6.0",
     "firebase-admin": "^11.11.0",
     "googleapis": "^144.0.0",
-    "@google/generative-ai": "^0.17.0",
+    "@google/genai": "^1.33.0",
     "uuid": "^9.0.1",
     "xml2js": "^0.6.2"
 
